apply plugin: 'java'

archivesBaseName = 'loom'

allprojects {
    apply plugin: 'checkstyle'
//    apply plugin: 'findbugs'
//    apply plugin: 'pmd'

    group = 'builders.loom'
    version = '1.0.0'

    sourceCompatibility = 9

    checkstyle {
        configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
        configProperties = [samedir: "${rootDir}/config/checkstyle", project_loc: "${rootDir}"]
    }

//    pmd {
//        consoleOutput = true
//    }
//
//    tasks.withType(FindBugs) {
//        reports {
//            xml.enabled = false
//            html.enabled = true
//        }
//    }

    repositories {
        jcenter()
    }
}

dependencies {
    compile project(':api')
    compile project(':util')
    runtimeOnly project(':plugin-java')
    runtimeOnly project(':plugin-junit4')
    runtimeOnly project(':plugin-checkstyle')
    runtimeOnly project(':plugin-findbugs')
    runtimeOnly project(':plugin-pmd')
    runtimeOnly project(':plugin-mavenresolver')
    runtimeOnly project(':plugin-springboot')
    runtimeOnly project(':plugin-idea')
    runtimeOnly project(':plugin-eclipse')
    compile('ch.qos.logback:logback-classic:1.1.7')
    compile('org.yaml:snakeyaml:1.18')
    compile('commons-cli:commons-cli:1.4')
    compile('org.fusesource.jansi:jansi:1.14')
    testCompile('junit:junit:4.12')
}

processResources {
    filesMatching('**/loom.properties') {
        filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
            "version" : project.version
        ]
    }
}

jar {
    manifest {
        attributes(
            'Main-Class': 'builders.loom.Loom',
            'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
        )
    }
}

task zip(type: Zip) {
    into(archivesBaseName + "-" + version) {
        into("lib") {
            from configurations.runtime.allArtifacts.files
            from configurations.runtime
        }
        into("plugin-java") {
            from project(':plugin-java').configurations.runtime.allArtifacts.files
            from project(':plugin-java').configurations.runtime
        }
        into("plugin-junit4") {
            from project(':plugin-junit4').configurations.runtime.allArtifacts.files
            from project(':plugin-junit4').configurations.runtime
        }
        into("plugin-mavenresolver") {
            from project(':plugin-mavenresolver').configurations.runtime.allArtifacts.files
            from project(':plugin-mavenresolver').configurations.runtime
        }
        into("plugin-checkstyle") {
            from project(':plugin-checkstyle').configurations.runtime.allArtifacts.files
            from project(':plugin-checkstyle').configurations.runtime
        }
        into("plugin-findbugs") {
            from project(':plugin-findbugs').configurations.runtime.allArtifacts.files
            from project(':plugin-findbugs').configurations.runtime
        }
        into("plugin-pmd") {
            from project(':plugin-pmd').configurations.runtime.allArtifacts.files
            from project(':plugin-pmd').configurations.runtime
        }
        into("plugin-springboot") {
            from project(':plugin-springboot').configurations.runtime.allArtifacts.files
            from project(':plugin-springboot').configurations.runtime
        }
        into("plugin-idea") {
            from project(':plugin-idea').configurations.runtime.allArtifacts.files
            from project(':plugin-idea').configurations.runtime
        }
        into("plugin-eclipse") {
            from project(':plugin-eclipse').configurations.runtime.allArtifacts.files
            from project(':plugin-eclipse').configurations.runtime
        }
        into("scripts") {
            from 'scripts/loom'
            from 'scripts/loom.cmd'
        }
    }
}

build.dependsOn zip
